# oop

./: .gitignore  CMakeLists.txt  catch.hpp
0/: test.cpp
1/: 1.cpp  CMakeLists.txt  copyfile.cpp  test.sh
1/flipbyte/: CMakeLists.txt  flipbyte.cpp  test.sh
2/: CMakeLists.txt  vector.cpp
2/1/: CMakeLists.txt  main.cpp  vectorBasics.cpp
2/1/Catch_tests/: CMakeLists.txt  vectorBasics_test.cpp
2/1/src/: CMakeLists.txt  vectorBasics.cpp  vectorBasics.h
2/1/tests/: CMakeLists.txt  vectorBasics_test.cpp
2/2/: CMakeLists.txt  main.cpp
2/2/src/: CMakeLists.txt  HtmlEncode.cpp  HtmlEncode.h
2/2/tests/: CMakeLists.txt  HtmlEncode_tests.cpp
2/3/: CMakeLists.txt  main.cpp  translations.txt
2/3/src/: CMakeLists.txt  CountWordOccurrences.cpp  CountWordOccurrences.h  Dictionary.cpp  Dictionary.h
2/3/tests/: CMakeLists.txt  CountWordOccurrences_tests.cpp  testTranslations.txt
2/4/: main.cpp
2/4/src/: CMakeLists.txt  PrimeNumbers.h
2/4/tests/: test.cpp
2/5/: main.cpp
2/5/src/: CMakeLists.txt  ParseURL.h
2/5/tests/: CMakeLists.txt  test.cpp
3/1/: main.cpp
3/1/src/: CMakeLists.txt  Car.cpp  Car.h  ConsoleControl.cpp  ConsoleControl.h  RemoteControl.cpp  RemoteControl.h  TVSet.cpp  TVSet.h
3/1/tests/: CMakeLists.txt  CarTests.cpp  (+3 more)
4/1_2/: .clang-format  input.txt  main.cpp
4/1_2/src/: CMakeLists.txt
4/1_2/src/figures/: CCircle.cpp  CCircle.h  CLineSegment.cpp  CLineSegment.h  CPoint.cpp  CPoint.h  CRectangle.cpp  CRectangle.h  CSolidShape.cpp  CSolidShape.h  CTriangle.cpp  CTriangle.h  IShape.h  ISolidShape.h
4/1_2/src/utils/: minMax.h  minMax.hpp  print.cpp  print.h  print.hpp  readShapes.h  readShapes.hpp
5/1_2/: main.cpp
6/1_7/: main.cpp
7/1_3/: .clang-format
7/2_1/: main.cpp
(+26 files in other folders)
